Phase 4C Header Batch 3: inject header via header-loader.js on Characters/NPCs/search. Verify PASS.

--- a/Characters.html
+++ b/Characters.html
@@ -17,21 +17,11 @@
 </head>
 
 <body>
+
     <div class="layout">
-        <!-- Header Partial: Top toolbar and navigation -->
-<div class="top">
-    <div class="toolbar">
-        <a class="chip" href="/index.html">Hembränt</a>
-        <a class="chip" href="/graph.html">Graph</a>
-        <a class="chip" href="/tags/index.html">Tags</a>
-        <a class="chip" href="/session.html">Session</a>
-        <button id="btnCreatePage" class="chip" title="Create New Page">+ New</button>
-        <button id="btnEditPage" class="chip" title="Edit This Page">Edit</button>
-    </div>
-    <div class="search"><input id="searchBox" type="search" placeholder="Search titles, headings, #tags (Cmd/Ctrl-K)" />
-    </div>
-    <div id="searchResults" class="hovercard"></div>
-</div>
+        <!-- HEADER-PARTIAL-INJECTED -->
+        <div id="site-header"></div>
+        <script src="header-loader.js"></script>
 
 <!-- Create Page Modal -->
 <div id="createPageModal" class="modal" style="display: none;">
