--- a/Arcs.html
+++ b/Arcs.html
@@ -109,25 +109,10 @@
             </div>
         </div>
         <!-- Compact weather strip: mirrors left-panel weather card -->
-        <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
-        <aside class="left"><!-- Sidebar Partial: Navigation drawer and sections -->
-            <div class="drawer" aria-label="Navigation">
-                <div class="drawer-handle">
-                    <button id="leftDrawerToggle" class="chip" aria-expanded="true"
-                        aria-controls="leftDrawer">Nav</button>
-                    <button id="leftDrawerPin" class="chip" aria-pressed="true">Pin</button>
-                    <button id="leftCollapseExpand" class="chip" title="Collapse/Expand All">Collapse all</button>
-                </div>
-                <div id="leftDrawer" class="drawer-content">
-                    <aside class="sidebar" role="navigation">
-                        <div class="campaign-header">
-                            <div class="campaign-title">Feywild Adventures</div>
-                        </div>
-                        <nav class="nav">
-                            <a class="nav-item nav-dashboard" href="/index.html"><span class="nav-icon">🏠</span><span
-                                    class="nav-text">Dashboard</span></a>
-                            <div class="nav-quick"><input id="navQuick" placeholder="Quick nav..." /></div>
-                            <!-- Top quick Tools block removed - use the Tools section from assets/nav.json instead -->
+            <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
+            <!-- SIDEBAR-PARTIAL-INJECTED -->
+            <div id="site-sidebar"></div>
+            <script src="/sidebar-loader.js"></script>
                             <details class="nav-details" open>
                                 <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span>
                                 </summary>
