--- a/Arcs.html
+++ b/Arcs.html
@@ -109,42 +109,10 @@
             </div>
         </div>
         <!-- Compact weather strip: mirrors left-panel weather card -->
-            <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
-            <!-- SIDEBAR-PARTIAL-INJECTED -->
-            <div id="site-sidebar"></div>
-            <script src="/sidebar-loader.js"></script>
-                            <details class="nav-details" open>
-                                <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span>
-                                </summary>
-                                <ul id="navFav" class="nav-list"></ul>
-                            </details>
-                            <ul id="navSections" class="nav-sections"></ul>
-                            <script src="/assets/nav-loader.js"></script>
-                        </nav>
-                        <!-- Weather card: DnD dice-driven weather generator -->
-                        <div id="weatherCard" class="card weather-card" aria-label="Weather">
-                            <div class="weather-header">
-                                <div class="weather-title">Weather</div>
-                                <button id="rollWeather" class="chip" title="Roll weather">Roll</button>
-                            </div>
-                            <div class="weather-now" aria-live="polite">
-                                <div class="weather-icon">⛅</div>
-                                <div class="weather-desc">
-                                    <div class="weather-condition">Unknown</div>
-                                    <div class="weather-meta">--</div>
-                                </div>
-                            </div>
-                            <ul class="weather-forecast" role="list">
-                                <!-- forecast rows populated by JS -->
-                            </ul>
-                            <div class="weather-effects" aria-hidden="false">
-                                <!-- effects populated by JS -->
-                            </div>
-                        </div>
-                    </aside>
-                </div>
-            </div>
-        </aside>
+        <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
+        <!-- SIDEBAR-PARTIAL-INJECTED -->
+        <aside id="site-sidebar" class="left"></aside>
+        <script src="/sidebar-loader.js"></script>
         <main class="main">
             <div class="breadcrumb-container">
                 <div id="breadcrumbText" class="main-breadcrumb meta"></div>
