left sidebar refactoring DONE

--- a/index.html
+++ b/index.html
@@ -111,17 +111,8 @@
         <!-- Compact weather strip: mirrors left-panel weather card -->
         <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
         <!-- SIDEBAR-PARTIAL-INJECTED -->
-        <div id="site-sidebar"></div>
+        <aside id="site-sidebar" class="left"></aside>
         <script src="/sidebar-loader.js"></script>
-        <!-- removed orphaned </ul> from previous sidebar block -->
-        <div class="weather-effects" aria-hidden="false">
-            <!-- effects populated by JS -->
-        </div>
-    </div>
-    </aside>
-    </div>
-    </div>
-    </aside>
     <main class="main">
         <div class="breadcrumb-container">
             <div id="breadcrumbText" class="main-breadcrumb meta"></div>
