--- a/Locations.html
+++ b/Locations.html
@@ -111,7 +111,7 @@
         <!-- Compact weather strip: mirrors left-panel weather card -->
             <div id="weatherStrip" class="weather-strip" aria-hidden="false"></div>
             <!-- SIDEBAR-PARTIAL-INJECTED -->
-            <div id="site-sidebar"></div>
+            <aside id="site-sidebar" class="left"></aside>
             <script src="/sidebar-loader.js"></script>
                             <details class="nav-details" open>
                                 <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span>
