Phase 4D: right panel contract fix batch 2

--- a/search.html
+++ b/search.html
@@ -8,20 +8,30 @@
     <title>Untitled</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765788543237" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765788543237" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765788543237" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765788543237" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765788543237" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765896686273" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765896686273" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765896686273" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765896686273" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765896686273" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
 <body>
-
-    <!-- HEADER-PARTIAL-INJECTED -->
-    <div id="site-header"></div>
-    <script src="header-loader.js"></script>
     <div class="layout">
+        <!-- Header Partial: Top toolbar and navigation -->
+<div class="top">
+    <div class="toolbar">
+        <a class="chip" href="/index.html">Hembränt</a>
+        <a class="chip" href="/graph.html">Graph</a>
+        <a class="chip" href="/tags/index.html">Tags</a>
+        <a class="chip" href="/session.html">Session</a>
+        <button id="btnCreatePage" class="chip" title="Create New Page">+ New</button>
+        <button id="btnEditPage" class="chip" title="Edit This Page">Edit</button>
+    </div>
+    <div class="search"><input id="searchBox" type="search" placeholder="Search titles, headings, #tags (Cmd/Ctrl-K)" />
+    </div>
+    <div id="searchResults" class="hovercard"></div>
+</div>
 
 <!-- Create Page Modal -->
 <div id="createPageModal" class="modal" style="display: none;">
@@ -343,21 +353,21 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765788543237"></script>
-    <script src="/assets/right-panel.js?v=1765788543237"></script>
-    <script src="/assets/site.js?v=1765788543237"></script>
-    <script src="/assets/favorites.js?v=1765788543237"></script>
-    <script src="/assets/wysiwyg.js?v=1765788543237"></script>
-    <script src="/assets/right-panel-loader.js?v=1765788543237"></script>
-    <script src="/assets/right-panel.js?v=1765788543237"></script>
-    <script src="/assets/keyboard-nav.js?v=1765788543237"></script>
-    <script src="/assets/theme.js?v=1765788543237"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765788543237"></script>
-    <script src="/assets/collapsible-sections.js?v=1765788543237"></script>
-    <script src="/assets/weather.js?v=1765788543237"></script>
+    <script src="/assets/right-panel-loader.js?v=1765896686273"></script>
+    <script src="/assets/right-panel.js?v=1765896686273"></script>
+    <script src="/assets/site.js?v=1765896686273"></script>
+    <script src="/assets/favorites.js?v=1765896686273"></script>
+    <script src="/assets/wysiwyg.js?v=1765896686273"></script>
+    <script src="/assets/right-panel-loader.js?v=1765896686273"></script>
+    <script src="/assets/right-panel.js?v=1765896686273"></script>
+    <script src="/assets/keyboard-nav.js?v=1765896686273"></script>
+    <script src="/assets/theme.js?v=1765896686273"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765896686273"></script>
+    <script src="/assets/collapsible-sections.js?v=1765896686273"></script>
+    <script src="/assets/weather.js?v=1765896686273"></script>
     <!-- Enemy Generator: Always include the mini-app script on this page -->
     {{#if TITLE == 'Enemy Generator'}}
-    <script src="/assets/enemy-generator.js?v=1765788543237"></script>
+    <script src="/assets/enemy-generator.js?v=1765896686273"></script>
     {{/if}}
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
